--- a/login.css
+++ b/login.css
@@ -116,7 +116,7 @@ nav img{
     left: 50%;
     transform: translate(-50%,-50%);
     background:#fff;
-    padding: 50px 60px 60px;
+    padding: 50px 50px 60px;
     text-align: center;
     margin: 0 auto;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
@@ -134,7 +134,7 @@ nav img{
 
 .field{
     background: #eaeaea; ;
-    margin: 15px 0;
+    margin: 15px 10px;
     border-radius:3px;
     display: flex;
     align-items: center;
